--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,28 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(facile VERSION 0.1.0 LANGUAGES C)
+project(facile VERSION 0.6.0 LANGUAGES C)
 
 find_package(FLEX)
 
 flex_target(
   FACILE_SCANNER
-  src/facile.lex
+  src/facile.l
   ${CMAKE_CURRENT_BINARY_DIR}/facile.lex.c
 )
 
-add_executable(facile facile.lex.c ${FLEX_FACILE_SCANNER_OUTPUTS})
+find_package(BISON)
+
+bison_target(
+  FACILE_PARSER
+  src/facile.y
+  ${CMAKE_CURRENT_BINARY_DIR}/facile.y.c
+)
+
+add_executable(
+  facile 
+  ${FLEX_FACILE_SCANNER_OUTPUTS}
+  ${BISON_FACILE_PARSER_OUTPUTS}
+)
 
 target_link_libraries(facile fl)
 
