Not workign after 5.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,20 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.10)
 
 project(facile VERSION 0.6.0 LANGUAGES C)
 
+# Find the Flex and Bison packages
 find_package(FLEX)
+find_package(BISON)
+
+# Find the GLib package
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GLIB REQUIRED glib-2.0)
 
 flex_target(
   FACILE_SCANNER
   src/facile.l
   ${CMAKE_CURRENT_BINARY_DIR}/facile.lex.c
 )
-
-find_package(BISON)
-
 bison_target(
   FACILE_PARSER
   src/facile.y
@@ -19,12 +22,22 @@ bison_target(
 )
 
 add_executable(
-  facile 
+  facile
   ${FLEX_FACILE_SCANNER_OUTPUTS}
   ${BISON_FACILE_PARSER_OUTPUTS}
 )
 
-target_link_libraries(facile fl)
+target_link_libraries(
+  facile
+  PRIVATE
+  ${GLIB_LIBRARIES}
+)
+
+target_include_directories(
+  facile
+  PRIVATE
+  ${GLIB_INCLUDE_DIRS}
+)
 
 set(CPACK_SOURCE_GENERATOR "ZIP")
 set(CPACK_SOURCE_IGNORE_FILES "build;~$;${CPACK_SOURCE_IGNORE_FILES}")
